--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.paichinger</groupId>
+	<groupId>com.github.paichinger</groupId>
 	<artifactId>jhelmfile</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
