--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,1 +1,27 @@
-name: Build and deploy maven artifactson:  push:    tags:      - 'trigger-release'jobs:  build:    runs-on: ubuntu-latest    steps:      - name: Import gpg key        run: |          echo ${{ secrets.OSS_GPG_KEY }} > key.file          gpg --import --passphrase ${{ secrets.OSS_GPG_PASSPHRASE }} --pinentry-mode loopback key.file      - uses: actions/checkout@v3      - name: Set up JDK 17        uses: actions/setup-java@v3        with:          java-version: '17'          distribution: 'temurin'      - name: Build with Maven        run: |          mvn release:prepare -Darguments=-Dgpg.keyname=BE9D7ADFF932C2ADC37727B9ED718372031EE4BB          mvn release:perform -Darguments=-Dgpg.keyname=BE9D7ADFF932C2ADC37727B9ED718372031EE4BB
+---
+name: Build and deploy maven artifacts
+on:
+  push:
+    tags:
+      - trigger-release
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Import gpg key
+        run: >
+          echo ${{ secrets.OSS_GPG_KEY }} > key.file
+
+          gpg --import --passphrase ${{ secrets.OSS_GPG_PASSPHRASE }} --pinentry-mode loopback key.file
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: temurin
+      - name: Build with Maven
+        run: >
+          mvn release:prepare
+          -Darguments=-Dgpg.keyname=BE9D7ADFF932C2ADC37727B9ED718372031EE4BB
+
+          mvn release:perform -Darguments=-Dgpg.keyname=BE9D7ADFF932C2ADC37727B9ED718372031EE4BB
