fix release workflow.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,9 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Import gpg key
-        run: >
-          echo ${{ secrets.OSS_GPG_KEY }} > key.file
-
+        run: |
+          echo ${{ secrets.OSS_GPG_PRIVATE_KEY }} > key.file
           gpg --import --passphrase ${{ secrets.OSS_GPG_PASSPHRASE }} --pinentry-mode loopback key.file
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -20,8 +19,6 @@ jobs:
           java-version: "17"
           distribution: temurin
       - name: Build with Maven
-        run: >
-          mvn release:prepare
-          -Darguments=-Dgpg.keyname=BE9D7ADFF932C2ADC37727B9ED718372031EE4BB
-
+        run: |
+          mvn release:prepare -Darguments=-Dgpg.keyname=BE9D7ADFF932C2ADC37727B9ED718372031EE4BB
           mvn release:perform -Darguments=-Dgpg.keyname=BE9D7ADFF932C2ADC37727B9ED718372031EE4BB
