--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,5 +24,6 @@ jobs:
           git config --global user.email "p.aichinger@googlemail.com"
           git config --global user.name "paichinger"
           echo "${{ secrets.MAVEN_SETTINGS }}" | base64 -d > settings.xml
+          cat settings.xml
           mvn -B --settings settings.xml --no-transfer-progress release:prepare -Darguments=-Dgpg.keyname=A0CE0D27564D87E0E95E51B36698D217CB772B1C
           mvn -B --settings settings.xml --no-transfer-progress release:perform -Darguments=-Dgpg.keyname=A0CE0D27564D87E0E95E51B36698D217CB772B1C
