--- a/pom.xml
+++ b/pom.xml
@@ -108,5 +108,6 @@
 		<url>https://github.com/paichinger/jhelmfile</url>
 		<connection>scm:git:https://github.com/paichinger/jhelmfile.git</connection>
 		<developerConnection>scm:git:https://github.com/paichinger/jhelmfile.git</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 </project>
