--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,6 @@
 		<url>https://github.com/paichinger/jhelmfile</url>
 		<connection>scm:git:https://github.com/paichinger/jhelmfile.git</connection>
 		<developerConnection>scm:git:https://github.com/paichinger/jhelmfile.git</developerConnection>
-		<tag>trigger-release</tag>
+		<tag>HEAD</tag>
 	</scm>
 </project>
