--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,8 +23,8 @@ jobs:
           java-version: "17"
           distribution: temurin
       - name: Build with Maven
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          token: ${{ secrets.GITHUB_PAT }}
         run: |
           git config --global user.email "p.aichinger@googlemail.com"
           git config --global user.name "paichinger"
