--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Build and deploy maven artifacts
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'release-[0-9]+.[0-9]+'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,8 +18,6 @@ jobs:
           ref: main
           fetch-depth: 0
           token: ${{ secrets.PAT }}
-      - name: Set release env variable
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -30,5 +28,7 @@ jobs:
           git config --global user.email "p.aichinger@googlemail.com"
           git config --global user.name "releasebot"
           echo "${{ secrets.MAVEN_SETTINGS }}" | base64 -d > settings.xml
-          mvn -B --settings settings.xml --no-transfer-progress release:prepare -Darguments=-Dgpg.keyname=A0CE0D27564D87E0E95E51B36698D217CB772B1C
+          NEW_VERSION=$(echo $GITHUB_REF_NAME | cut -c 9-)
+          echo "Preparing release version: $NEW_VERSION"
+          mvn -B --settings settings.xml --no-transfer-progress release:prepare -Darguments=-Dgpg.keyname=A0CE0D27564D87E0E95E51B36698D217CB772B1C -DreleaseVersion=$NEW_VERSION
           mvn -B --settings settings.xml --no-transfer-progress release:perform -Darguments=-Dgpg.keyname=A0CE0D27564D87E0E95E51B36698D217CB772B1C
