--- a/src/test/resources/helmfiles/helmfile.yaml
+++ b/src/test/resources/helmfiles/helmfile.yaml
@@ -1,1 +1,10 @@
-repositories:  - name: prometheus-community    url: https://prometheus-community.github.io/helm-chartsreleases:  - name: prom-norbac-ubuntu    namespace: prometheus    chart: prometheus-community/prometheus    set:      - name: rbac.create        value: false
+repositories:
+  - name: prometheus-community
+    url: https://prometheus-community.github.io/helm-charts
+releases:
+  - name: prom-norbac-ubuntu
+    namespace: prometheus
+    chart: prometheus-community/prometheus
+    set:
+      - name: rbac.create
+        value: false
